Lots of changes!

--- a/_posts/2014-03-29-test-post.md
+++ b/_posts/2014-03-29-test-post.md
@@ -1,20 +1,15 @@
 ---
-layout: post
+layout: post_md
 title: First Test Post
+subtitle: Just a test post while I work out the kinks in the styling. <a href="http://www.chris-granger.com/">Click here</a> to see the inspiration.
 ---
 
-<article>
-<time>{{  page.date| date_to_string }}</time>
-<h2>Toward Nonsense and Lorem Ipsum</h2>
-<p><em>Just a test post while I work out the kinks in the styling. <a href="http://www.chris-granger.com/">Click here</a> to see the inspiration.</em></p>
-<p>
-
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis nisl mauris. Phasellus rutrum odio lacus, hendrerit vehicula nisi laoreet a. Morbi porta ipsum in luctus blandit. Morbi condimentum mauris id odio ornare, at pharetra dolor porta. Phasellus suscipit nisl id arcu dictum, eget varius quam pulvinar. Integer pharetra vestibulum nunc pulvinar auctor. Nam adipiscing ante sem, sed convallis sem euismod rhoncus. Curabitur sit amet dui a metus blandit consequat. Nullam nibh enim, molestie non ante non, laoreet dapibus turpis. Aenean accumsan, massa et ornare malesuada, lectus neque commodo urna, vel vulputate velit orci vitae risus. In elementum mauris nec placerat lacinia. Donec ac sem leo.
-</p><p>
+
 Pellentesque sollicitudin consectetur purus, id placerat tellus rutrum in. Nunc tincidunt suscipit quam laoreet pellentesque. Sed auctor et neque nec gravida. Donec velit leo, hendrerit vel ante quis, ornare tempor nulla. Pellentesque tempor nisl tellus, eget adipiscing erat malesuada eget. Etiam eu faucibus nulla, nec blandit erat. Morbi auctor elit nunc, ac aliquam lectus tempor nec. Fusce quis lorem lorem. Integer laoreet, felis vestibulum lobortis fringilla, massa erat scelerisque tortor, et tincidunt dui diam vitae velit. Pellentesque gravida mattis congue.
-</p><p>
+
 Fusce eleifend nunc non turpis dignissim aliquam. Ut accumsan ultricies justo eu mollis. Mauris faucibus dolor sit amet auctor vestibulum. Nunc enim orci, sagittis ac pellentesque in, porta non sapien. Donec laoreet mauris ac pellentesque venenatis. Cras ultrices risus sit amet justo tincidunt ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla vel ligula sed turpis venenatis rhoncus. Fusce placerat neque id elementum lobortis. Duis ut velit vel augue rhoncus hendrerit. Aliquam dapibus est vitae lectus vehicula iaculis. Pellentesque placerat condimentum nibh, vulputate auctor leo malesuada vitae.
-</p><p>
+
 Nam diam urna, accumsan eget sem vel, adipiscing lacinia tortor. Maecenas feugiat sagittis congue. Sed in ipsum nisi. Mauris semper turpis nisl, eget tincidunt orci porta nec. In iaculis rutrum nibh ac vestibulum. Donec molestie justo ut ultricies dictum. Quisque sodales iaculis purus ac varius.
-</p><p>
-Morbi faucibus ultricies nisi, eget luctus dolor rhoncus at. Aenean posuere leo id metus vestibulum, eu dapibus nisi accumsan. Duis non metus a massa hendrerit varius eu vitae mi. Maecenas auctor nunc sit amet commodo porttitor. Nullam vel mi viverra, rhoncus velit a, sodales nunc. Nam commodo, risus et condimentum sollicitudin, lectus nunc rhoncus dolor, eu porta justo tortor vitae nunc. In mattis id eros eget tincidunt. Etiam dapibus lectus congue, ultrices leo a, rutrum erat. Nam in tortor sed augue iaculis bibendum. Sed eu metus ac mi varius eleifend ut eget sapien. In sodales tortor eget accumsan vulputate. </p></article> 
+
+Morbi faucibus ultricies nisi, eget luctus dolor rhoncus at. Aenean posuere leo id metus vestibulum, eu dapibus nisi accumsan. Duis non metus a massa hendrerit varius eu vitae mi. Maecenas auctor nunc sit amet commodo porttitor. Nullam vel mi viverra, rhoncus velit a, sodales nunc. Nam commodo, risus et condimentum sollicitudin, lectus nunc rhoncus dolor, eu porta justo tortor vitae nunc. In mattis id eros eget tincidunt. Etiam dapibus lectus congue, ultrices leo a, rutrum erat. Nam in tortor sed augue iaculis bibendum. Sed eu metus ac mi varius eleifend ut eget sapien. In sodales tortor eget accumsan vulputate. </p>
