--- a/_posts/2014-03-29-test-post.md
+++ b/_posts/2014-03-29-test-post.md
@@ -1,5 +1,5 @@
 ---
-layout: post_md
+layout: post
 title: First Test Post
 subtitle: Just a test post while I work out the kinks in the styling. <a href="http://www.chris-granger.com/">Click here</a> to see the inspiration.
 ---
