Changed some css, particularly blockquote

--- a/_posts/2014-03-30-test-post-2.md
+++ b/_posts/2014-03-30-test-post-2.md
@@ -38,7 +38,7 @@ print triangle[0][0]
 
 Donec id aliquet mauris, tincidunt viverra risus. Donec ullamcorper sapien non magna aliquam, vitae gravida velit volutpat. Pellentesque ut dui eros. Duis sagittis, felis non pulvinar facilisis, orci sem aliquam nibh, non malesuada tellus nisl at tortor. Sed non commodo sapien. Fusce porta imperdiet mauris at auctor. Ut quis posuere sem, tristique vestibulum arcu. Mauris convallis adipiscing nisl vel molestie. Nulla facilisi. Suspendisse potenti.
 
-{% highlight javascript linenos %}
+{% highlight json linenos %}
 { "web-app" : { "servlet" : [ { "init-param" : { "cachePackageTagsRefresh" : 60,
                 "cachePackageTagsStore" : 200,
                 "cachePackageTagsTrack" : 200,
