added View More to bottom of posts

--- a/_posts/2014-03-29-test-post.md
+++ b/_posts/2014-03-29-test-post.md
@@ -12,4 +12,4 @@ Fusce eleifend nunc non turpis dignissim aliquam. Ut accumsan ultricies justo eu
 
 Nam diam urna, accumsan eget sem vel, adipiscing lacinia tortor. Maecenas feugiat sagittis congue. Sed in ipsum nisi. Mauris semper turpis nisl, eget tincidunt orci porta nec. In iaculis rutrum nibh ac vestibulum. Donec molestie justo ut ultricies dictum. Quisque sodales iaculis purus ac varius.
 
-Morbi faucibus ultricies nisi, eget luctus dolor rhoncus at. Aenean posuere leo id metus vestibulum, eu dapibus nisi accumsan. Duis non metus a massa hendrerit varius eu vitae mi. Maecenas auctor nunc sit amet commodo porttitor. Nullam vel mi viverra, rhoncus velit a, sodales nunc. Nam commodo, risus et condimentum sollicitudin, lectus nunc rhoncus dolor, eu porta justo tortor vitae nunc. In mattis id eros eget tincidunt. Etiam dapibus lectus congue, ultrices leo a, rutrum erat. Nam in tortor sed augue iaculis bibendum. Sed eu metus ac mi varius eleifend ut eget sapien. In sodales tortor eget accumsan vulputate. </p>
+Morbi faucibus ultricies nisi, eget luctus dolor rhoncus at. Aenean posuere leo id metus vestibulum, eu dapibus nisi accumsan. Duis non metus a massa hendrerit varius eu vitae mi. Maecenas auctor nunc sit amet commodo porttitor. Nullam vel mi viverra, rhoncus velit a, sodales nunc. Nam commodo, risus et condimentum sollicitudin, lectus nunc rhoncus dolor, eu porta justo tortor vitae nunc. In mattis id eros eget tincidunt. Etiam dapibus lectus congue, ultrices leo a, rutrum erat. Nam in tortor sed augue iaculis bibendum. Sed eu metus ac mi varius eleifend ut eget sapien. In sodales tortor eget accumsan vulputate.
